deploye the app to the external server

--- a/UserDetails/pom.xml
+++ b/UserDetails/pom.xml
@@ -12,6 +12,7 @@
 	<groupId>UserDetails</groupId>
 	<artifactId>UserDetails</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>UserDetails</name>
 	<description>user and their  details</description>
 	<properties>
@@ -65,8 +66,16 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
-			
+
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-tomcat -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
 
 
 	</dependencies>
