--- a/UserDetails/src/main/resources/application.properties
+++ b/UserDetails/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=Neha@2497
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.show-sql=true
 tockenSsecret = jf9i4jgu83nfl0
+server.servlet.context-path=/user-authentication
+
